--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nhsuk-prototype-kit",
-  "version": "3.0.6",
-  "description": "Rapidly create HTML prototypes of NHS websites and services.",
+  "name": "nhsbsa-frontend",
+  "version": "3.1.0",
+  "description": "NHSBSA frontend contains the code you need to start building user interfaces for NHS websites and services.",
   "main": "app.js",
   "scripts": {
     "build": "gulp build",
@@ -9,31 +9,32 @@
     "start": "node app.js",
     "test": "",
     "prewatch": "gulp build",
-    "watch": "gulp"
+    "watch": "gulp",
+    "dev": "nodemon app.js"
   },
   "author": "https://github.com/nhsuk/",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
     "client-sessions": "^0.8.0",
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^4.2.0",
-    "gulp-nodemon": "^2.4.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-nodemon": "^2.5.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "keypather": "^3.0.0",
-    "nhsuk-frontend": "^3.0.2",
-    "node-sass": "^4.13.0",
-    "nunjucks": "^3.2.0",
+    "nhsuk-frontend": "^3.1.0",
+    "node-sass": "^4.14.1",
+    "nunjucks": "^3.2.1",
     "path": "^0.12.7"
   },
   "devDependencies": {}
